<!--
  ~ Tradr
  ~ Copyright (c) 2022-2022, Sylvester Roos <pistrie@duck.com>
  ~
  ~ Tradr is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Tradr is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Tradr.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name" translatable="false">Tradr</string>
    <string name="enter_price" translatable="false">0.01 = 1 cent</string>
    <string name="generate">Generate</string>
    <string name="payment_qr_code">Payment QR code</string>
    <string name="preferences">Preferences</string>
    <string name="account_owner">Name of recipient</string>
    <string name="account_number">Dutch account number (IBAN)</string>
    <string name="transfer_description">Transfer description (optional)</string>
    <string name="price">Price</string>
    <string name="welcome_to_tradr">Welcome to Tradr!</string>
    <string name="first_launch_one">This app will generate a QR code which you can use to receive payment from your customers.</string>
    <string name="first_launch_two">Sadly, the QR code is only a standard, so banks need to decide to implement it in their apps. All tested banks will have a logo under the QR code.</string>
    <string name="first_launch_three">You will need to provide your name and the IBAN of your bank account in the preferences of the app. This way a valid QR code can be generated by only entering a price, instead of having to enter your information over and over again.</string>
    <string name="first_launch_four">When the main screen is visible, click on the three dots on the top right of the screen. Then click on the \'preferences\' item.</string>
    <string name="first_launch_five">You will see three fields where you need to supply information about your bank account.</string>
    <string name="first_launch_six">Now go back into the main screen, enter a price, and show the QR code to your customer. When this code is scanned with a QR code scanner in a supported banking app it will open the transfer screen with the information you supplied.</string>
    <string name="first_launch_button">Got it</string>
    <string name="name_account_owner_summary">Enter the name of the account owner</string>
    <string name="transfer_description_summary">I.e., the name of your business</string>
    <string name="enter_a_price">Enter a price</string>
    <string name="first_launch_setup">Setting up:</string>
    <string name="invalid_iban">The supplied IBAN is not valid.</string>
    <string name="required_info_missing">Not all required information has been supplied in the preferences area</string>
    <string name="ing_logo" translatable="false">ING logo</string>
    <string name="knab_logo" translatable="false">Knab logo</string>
    <string name="asn_logo" translatable="false">ASN logo</string>
    <string name="bunq_logo" translatable="false">Bunq logo</string>
    <string name="sns_logo" translatable="false">SNS logo</string>
    <string name="info" translatable="false">Info</string>
    <string name="source_code">Source code available on:\nhttps://gitlab.com/Pistrie/tradr</string>
    <string name="warranty_notice">This program comes with absolutely no warranty.\nSee the GNU General Public License, version 3 or later for details.</string>
    <string name="app_description">Banking QR code generator</string>
    <string name="created_by_sylvester_roos">By Sylvester Roos</string>
</resources>