<?xml version="1.0" encoding="utf-8"?><!--
  ~ Tradr
  ~ Copyright (c) 2022-2022, Sylvester Roos <pistrie@duck.com>
  ~
  ~ Tradr is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Tradr is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Tradr.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="name_account_owner"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/name_account_owner_summary"
        android:title="@string/account_owner" />
    <EditTextPreference
        android:key="bank_number"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/account_number" />
    <EditTextPreference
        android:key="transfer_description"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/transfer_description_summary"
        android:title="@string/transfer_description" />
</PreferenceScreen>