<?xml version="1.0" encoding="utf-8"?><!--
  ~ Tradr
  ~ Copyright (c) 2022-2022, Sylvester Roos <pistrie@duck.com>
  ~
  ~ Tradr is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Tradr is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Tradr.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.Tradr.FullscreenContainer"
    tools:context=".activities.QRCodeActivity">

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/qr_output"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/qr_output"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/qr_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/payment_qr_code"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/bank_logos_grid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="100"
        android:columnCount="3"
        android:rowCount="1"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_output"
        app:layout_constraintVertical_bias="0.1">

        <ImageView
            android:id="@+id/ing_logo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/ing_logo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_ing" />

        <ImageView
            android:id="@+id/asn_logo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/asn_logo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_asn" />

        <ImageView
            android:id="@+id/knab_logo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/knab_logo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_knab" />

    </GridLayout>

    <GridLayout
        android:id="@+id/bank_logos_grid2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="100"
        android:columnCount="2"
        android:rowCount="1"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_logos_grid1"
        app:layout_constraintVertical_bias="0.1">

        <ImageView
            android:id="@+id/bunq_logo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bunq_logo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_bunq" />

        <ImageView
            android:id="@+id/sns_logo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/sns_logo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/sns" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>